@@ -23,6 +23,7 @@
       % Version 14
       _ 2016-xx-xx
       ! Important due to new method for Domogik 0.4+ command, it's strongly recommended to synchronize again with Domogik.
+      * #70 new sync method that delete widget if device didn't exist.
       * #34 new sync method that deleting only area (Usage/device). At least at the 2nd next sync.
       * #69 Widget command whith multiple parameters
       * #68 Android > KitKat image picker method change
